anim bortagen för positionering

--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -173,7 +173,7 @@ input[type=text]:placeholder {
   animation-fill-mode: both;
 }
 
-@-webkit-keyframes fadeInDown {
+/*@-webkit-keyframes fadeInDown {
   0% {
     opacity: 0;
     -webkit-transform: translate3d(0, -100%, 0);
@@ -197,7 +197,7 @@ input[type=text]:placeholder {
     -webkit-transform: none;
     transform: none;
   }
-}
+}*/
 
 /* Simple CSS3 Fade-in Animation */
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
